--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -75,35 +75,35 @@
 }
 
 #starback {
-    background-image: url(./images/background-stars.png);
+    background-image: url(../images/background-stars.png);
     background-size: cover;
 }
 
 #deathstar {
-    background-image: url(./images/deathstar.png);
+    background-image: url(../images/deathstar.png);
     background-size: cover;
 }
 
 #name {
-    background-image: url(./images/name.png);
+    background-image: url(../images/name.png);
     background-repeat: no-repeat;
 }
 
 #enterprise {
-    background-image: url(./images/enterprise.png);
+    background-image: url(../images/enterprise.png);
     background-repeat: no-repeat;
 }
 
 #atlantabackground {
-    background-image: url(./images/atlantabackground.png);
+    background-image: url(../images/atlantabackground.png);
 }
 
 #jeremy {
-    background-image: url(./images/jeremy.png);
+    background-image: url(../images/jeremy.png);
     background-size: cover;
 }
 
 #atlantaforeground {
-    background-image: url(./images/atlantaforeground.png);
+    background-image: url(../images/atlantaforeground.png);
 
 }
